aded create-reservation that will have inputs for service type and date

--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
@@ -1,2 +1,3 @@
-<h1>Home Component</h1>
-<app-booking-search></app-booking-search>
+<h1 id="title">Welcome to Berber Booking!</h1>
+
+<app-create-reservation></app-create-reservation>
