--- a/BarberBooking/barberbooking.client/src/app/modules/booking-search/booking-search.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/booking-search/booking-search.component.html
@@ -11,7 +11,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <app-booking-calendar></app-booking-calendar>
+    <app-booking-calendar (dateSelected)="OnDateSelected($event)" ></app-booking-calendar>
   </div>
   <div class="modal-footer">
     <button type="button" (click)="modal.dismiss()" class="btn btn-secondary">Close</button>
