--- a/BarberBooking/barberbooking.client/src/app/modules/modal/available-hours-modal/available-hours-modal.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/modal/available-hours-modal/available-hours-modal.component.html
@@ -7,7 +7,7 @@
   <div class="modal-body">
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" *ngFor="let hour of availableHours">
+        <div (click)="setCurrentHours(hour)" class="swiper-slide" *ngFor="let hour of availableHours">
           {{ hour }}
         </div>
       </div>
