--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
@@ -1,3 +1,6 @@
-<h1 id="title">Welcome to Berber Booking!</h1>
+<div class="container">
+  <app-navigation></app-navigation>
+  <h1 id="title">Welcome to Berber Booking!</h1>
 
-<app-create-reservation></app-create-reservation>
+  <app-create-reservation></app-create-reservation>
+</div>
