--- a/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Home</a>
+    <a class="nav-link" [routerLink]="'/home'"routerLinkActive="active"  >Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Reservations</a>
+    <a class="nav-link"[routerLink]="'/list-reservations'" routerLinkActive="active"   >Reservations</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" [routerLink]="'/sign-up'" routerLinkActive="active">Sign up</a>
   </li>
 </ul>
