--- a/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
@@ -1,11 +1,17 @@
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="'/home'"routerLinkActive="active"  >Home</a>
+    <a class="nav-link" [routerLink]="'/home'" routerLinkActive="active">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link"[routerLink]="'/list-reservations'" routerLinkActive="active"   >Reservations</a>
+    <a class="nav-link" [routerLink]="'/list-reservations'" routerLinkActive="active">Reservations</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" [routerLink]="'/sign-up'" routerLinkActive="active">Sign up</a>
+  <li (click)="logout()" class="nav-item" *ngIf="isAuthenticated"> 
+    <a class="nav-link">Logout</a>
+  </li>
+  <li *ngIf="!isAuthenticated" class="nav-item">
+    <a class="nav-link" [routerLink]="'/login'" routerLinkActive="active">Login</a>
+  </li>
+  <li *ngIf="!isAuthenticated" class="nav-item">
+    <a class="nav-link" [routerLink]="'/sign-up'" routerLinkActive="active">Register</a>
   </li>
 </ul>
