--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div style="background-image:url('../../../assets/images/barberbooking-background.webp')" class="container">
   <app-navigation></app-navigation>
-  <h1 id="title">Welcome to Berber Booking!</h1>
+  <h1 id="title">Welcome to Berber Booking</h1>
 
   <app-create-reservation></app-create-reservation>
 </div>
