--- a/BarberBooking/barberbooking.client/src/app/modules/list-reservations/list-reservations.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/list-reservations/list-reservations.component.html
@@ -4,14 +4,14 @@
   <table class="table table-striped table-hover">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">User ID</th>
+        <th scope="col">User</th>
         <th scope="col">Service Type</th>
         <th scope="col">Date of Reservation</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let reservation of allReservations">
-        <td>{{reservation.id}}</td>
+        <td>{{currentUser?.name}} {{currentUser?.surname}}</td>
         <td>
           <strong>{{ reservation.serviceType?.name }}</strong><br>
           {{ reservation.serviceType?.description }}<br>
@@ -20,8 +20,8 @@
           </span>
         </td>
         <td>{{ reservation.dateOfReservation | date:'dd/MM/yyyy HH:mm' }}</td>
-        <td class="d-flex justify-content-center">
-          <button (click)="openEditReservationModal(reservation)" class="btn btn-secondary">Edit</button>
+        <td>
+          <button (click)="openEditReservationModal(reservation)" class="btn btn-secondary me-2">Edit</button>
           <button (click)="deleteReservation(reservation.id)" class="btn btn-danger">Delete</button>
         </td>
       </tr>
