Created forgot password, reset password functionality alongside EmailService for sending PasswordToken (added in db User) in confirmation mail.

--- a/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.html
@@ -11,6 +11,7 @@
       <button [disabled]="!loginForm.valid" type="submit">Log in</button>
 
       <p>Don't have account ? <a [routerLink]="['/sign-up']">Sign In</a></p>
+      <a [routerLink]="['/forgot-password']">Forgot password</a>
     </form>
   </div>
 </div>
