change password added

--- a/BarberBooking/barberbooking.client/src/app/modules/change-password/change-password.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/change-password/change-password.component.html
@@ -1,1 +1,17 @@
-<p>change-password works!</p>
+<div class="container">
+  <app-navigation></app-navigation>
+  <div class="main">
+    <h3 class="display-6 pb-4 text-center">Change password</h3>
+    <form [formGroup]="formGroup" class="example-form">
+      <mat-form-field class="input">
+        <mat-label>Old password</mat-label>
+        <input formControlName="oldPassword" matInput type="password">
+      </mat-form-field>
+      <mat-form-field class="input">
+        <mat-label>New password</mat-label>
+        <input formControlName="newPassword" type="password" matInput>
+      </mat-form-field>
+      <button [disabled]="!formGroup.valid" (click)="changePassword()" id="save-pass-btn" mat-raised-button>Save changes</button>
+    </form>
+  </div>
+</div>
