--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.html
@@ -1,6 +1,12 @@
-<div style="background-image:url('../../../assets/images/barberbooking-background.webp')" class="container">
+<div class="container">
+  <div id="background"></div>
   <app-navigation></app-navigation>
-  <h1 id="title">Welcome to Berber Booking</h1>
-
-  <app-create-reservation></app-create-reservation>
+  <h1 class="display-2" id="title">Welcome to Berber Booking</h1>
+  <div id="main-section">
+    <p class="display-6 text-black w-50">
+      Book your favorite barber with ease and enjoy a seamless
+      grooming experience tailored just for you. No wait, no hassle, just great service!"
+    </p>
+    <app-create-reservation></app-create-reservation>
+  </div>
 </div>
