--- a/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/navigation/navigation.component.html
@@ -1,17 +1,22 @@
-<ul class="nav nav-pills nav-fill">
-  <li class="nav-item">
-    <a class="nav-link" [routerLink]="'/home'" routerLinkActive="active">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" [routerLink]="'/list-reservations'" routerLinkActive="active">Reservations</a>
-  </li>
-  <li (click)="logout()" class="nav-item" *ngIf="accountService.isAuthenticated()"> 
-    <a class="nav-link" [routerLink]="['/']">Logout</a>
-  </li>
-  <li *ngIf="!accountService.isAuthenticated()" class="nav-item">
-    <a class="nav-link" [routerLink]="'/login'" routerLinkActive="active">Login</a>
-  </li>
-  <li *ngIf="!accountService.isAuthenticated()" class="nav-item">
-    <a class="nav-link" [routerLink]="'/sign-up'" routerLinkActive="active">Register</a>
-  </li>
-</ul>
+<div>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="'/home'" routerLinkActive="active">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="'/list-reservations'" routerLinkActive="active">Reservations</a>
+    </li>
+    <li (click)="logout()" class="nav-item" *ngIf="accountService.isAuthenticated()">
+      <a class="nav-link" [routerLink]="['/']">Logout</a>
+    </li>
+    <li *ngIf="!accountService.isAuthenticated()" class="nav-item">
+      <a class="nav-link" [routerLink]="'/login'" routerLinkActive="active">Login</a>
+    </li>
+    <li *ngIf="!accountService.isAuthenticated()" class="nav-item">
+      <a class="nav-link" [routerLink]="'/sign-up'" routerLinkActive="active">Register</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="'/change-password'" routerLinkActive="active">Change password</a>
+    </li>
+  </ul>
+</div>
