--- a/BarberBooking/barberbooking.client/src/app/modules/booking-search/booking-search.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/booking-search/booking-search.component.html
@@ -9,13 +9,12 @@
     </button>
   </div>
   <div class="modal-body">
-    <app-booking-calendar ></app-booking-calendar>
+    <app-booking-calendar></app-booking-calendar>
   </div>
   <div class="modal-footer">
     <button type="button" (click)="modal.dismiss()" class="btn btn-secondary">Close</button>
   </div>
 </ng-template>
 
-
-<button class="btn btn-primary btn-lg" (click)="open(calendarModal)">Find avaible dates</button>
+<button (click)="open(calendarModal)" mat-fab extended>Find avaible dates</button>
 
