--- a/BarberBooking/barberbooking.client/src/app/modules/create-reservation/create-reservation.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/create-reservation/create-reservation.component.html
@@ -1,15 +1,22 @@
 <div id="reservation-section">
-  <h5 class="my-2">Choose barber service:</h5>
-  <select [(ngModel)]="selectedType" class="form-select w-25">
-    <option *ngFor="let st of serviceTypes" [ngValue]="st">{{st.name}}</option>
-  </select>
+  <mat-form-field id="select-service" >
+    <mat-label>Choose service</mat-label>
+    <mat-select [(ngModel)]="selectedType">
+      <mat-option *ngFor="let st of serviceTypes" [value]="st">{{ st.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
   <div>
-    <h5 class="my-2">Choose booking time:</h5>
+    <h5 class="md-2">Choose booking time:</h5>
     <p>{{selectedDate | date:'dd/MM/yyyy HH:mm'}}</p>
   </div>
   <app-booking-search></app-booking-search>
   <div>
-    <button [disabled]="!selectedType || !selectedDate" class="btn btn-success my-4" (click)="addReservation()">Add reservation</button>
+    <button mat-fab extended class="mt-2" (click)="addReservation()" [disabled]="!selectedType || !selectedDate" >
+      <div id="content-btn">
+        <span class="material-symbols-outlined pe-2">calendar_month</span>
+        Book reservation
+      </div>
+    </button>
   </div>
 
 </div>
