--- a/BarberBooking/barberbooking.client/src/app/modules/forgot-password/forgot-password.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/forgot-password/forgot-password.component.css
@@ -1,10 +1,10 @@
-.container {
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: calc(100vh - 40px);
 }
 
 .example-form {
