--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.css
@@ -1,9 +1,30 @@
-.container{
-    height:80vh;
-}
 #title {
   padding:16px;
   text-align:center;
   color:white;
   background-color:rgb(0,0,0,0.5)
+}
+
+#main-section {
+  max-width:inherit;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items:center;
+  background-color: rgb(255, 255, 255,0.6);
+}
+
+#background {
+  background-image: url('../../../assets/images/barberbooking-background.webp');
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  z-index: -1;
+}
+
+#container {
+  max-width: 80%;
+  margin: 0 auto;
 }
