--- a/BarberBooking/barberbooking.client/src/app/modules/list-reservations/list-reservations.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/list-reservations/list-reservations.component.html
@@ -21,8 +21,13 @@
         </td>
         <td>{{ reservation.dateOfReservation | date:'dd/MM/yyyy HH:mm' }}</td>
         <td>
-          <button (click)="openEditReservationModal(reservation)" class="btn btn-secondary me-2">Edit</button>
-          <button (click)="deleteReservation(reservation.id)" class="btn btn-danger">Delete</button>
+          <button (click)="deleteReservation(reservation.id)" mat-mini-fab aria-label="Delete">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button class="ms-4" (click)="openEditReservationModal(reservation)" mat-icon-button aria-label="Edit">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+
         </td>
       </tr>
     </tbody>
