--- a/BarberBooking/barberbooking.client/src/app/modules/modal/edit-reservation-modal/edit-reservation-modal.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/modal/edit-reservation-modal/edit-reservation-modal.component.html
@@ -5,9 +5,12 @@
   </div>
   <div class="modal-body">
     <h5 class="my-2">Choose barber service:</h5>
-    <select [(ngModel)]="newReservationService" class="form-select w-25">
-      <option *ngFor="let st of serviceTypes" [ngValue]="st">{{st.name}}</option>
-    </select>
+    <mat-form-field id="select-service">
+      <mat-label>Choose service</mat-label>
+      <mat-select [(ngModel)]="newReservationService">
+        <mat-option *ngFor="let st of serviceTypes" [value]="st">{{ st.name }}</mat-option>
+      </mat-select>
+    </mat-form-field>
     <div>
       <h5 class="my-2">Choose booking time:</h5>
       <p>{{newReservationDate | date:'dd/MM/yyyy HH:mm'}}</p>
