--- a/BarberBooking/barberbooking.client/src/app/modules/modal/edit-reservation-modal/edit-reservation-modal.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/modal/edit-reservation-modal/edit-reservation-modal.component.html
@@ -12,7 +12,7 @@
       </mat-select>
     </mat-form-field>
     <div>
-      <h5 class="my-2">Choose booking time:</h5>
+      <h5 class="my-2">Selected booking time:</h5>
       <p>{{newReservationDate | date:'dd/MM/yyyy HH:mm'}}</p>
     </div>
     <app-booking-search></app-booking-search>
