--- a/BarberBooking/barberbooking.client/src/app/modules/create-reservation/create-reservation.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/create-reservation/create-reservation.component.css
@@ -1,13 +1,18 @@
-#reservation-section{
-    background-color:rgb(255, 255, 255,0.6);
-    display:flex;
-    flex-direction:column;
-    padding:24px;
+#reservation-section {
+  display: flex;
+  flex-direction: column;
+  padding: 48px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius:8px;
 }
 
-#select-service{
-    max-width: 240px;
-    margin-bottom:0;
+#selected-booking-time{
+    margin-bottom: 8px;
+}
+
+#select-service {
+  max-width: 240px;
+  margin-bottom: 0;
 }
 
 .material-symbols-outlined {
@@ -18,5 +23,11 @@
     display:flex;
     justify-content:center;
     align-items:center;
+}
+
+#progress-spiner{
+    position:absolute;
+    top:50%;
+    left:50%;
 }
 
