--- a/BarberBooking/barberbooking.client/src/app/modules/home/home.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/home/home.component.css
@@ -1,8 +1,7 @@
 #title {
   padding:16px;
   text-align:center;
-  color:white;
-  background-color:rgb(0,0,0,0.5)
+  color:black;
 }
 
 #main-section {
@@ -14,7 +13,7 @@
   background-color: rgb(255, 255, 255,0.6);
 }
 
-#background {
+/*#background {
   background-image: url('../../../assets/images/barberbooking-background.webp');
   position: absolute;
   top: 0;
@@ -22,7 +21,7 @@
   min-width: 100vw;
   min-height: 100vh;
   z-index: -1;
-}
+}*/
 
 #container {
   max-width: 80%;
