--- a/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.css
@@ -1,83 +1,23 @@
-/* Container styling */
-.form-container {
+.main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
-  background-color: #C8E6E4;
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-form {
-  background-color: #FFFFFF;
-  padding: 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 360px;
-  text-align: center;
-}
-
-  /* Form title */
-  form h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #333333;
-  }
-
-  /* Form subtitle */
-  form p {
-    font-size: 14px;
-    margin-bottom: 0px;
-    color: #666666;
-  }
-
-/* Input fields */
-input {
-  outline:none;
+  justify-content: center;
   width: 100%;
-  padding: 12px;
-  margin: 10px 0;
-  border: 2px solid #CCCCCC;
-  border-radius: 5px;
-  font-size: 16px;
-  box-sizing: border-box;
+  height: calc(100vh - 40px);
 }
 
-/* Button */
-button {
-  width: 100%;
-  padding: 12px;
-  background-color: #80C7B9;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
+.example-form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
 }
 
-button:hover {
-  background-color: #69A897; /* Darker green on hover */
+.input {
+  max-width: 100%;
 }
 
-button:disabled {
-  background-color: #69A897;
-  color: #fff; 
-  cursor: not-allowed; 
-  opacity: 0.7; 
-}
-
-/* Sign-in link */
-form a {
-  color: #6FA99D;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-input:focus {
-  border: 2px solid #C8E6E4;
-}
-
-form a:hover {
-  text-decoration: underline;
+#save-pass-btn {
+  max-width: 156px;
+  padding: 16px
 }
