--- a/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.html
+++ b/BarberBooking/barberbooking.client/src/app/modules/log-in/log-in.component.html
@@ -1,17 +1,20 @@
 <div class="container">
   <app-navigation></app-navigation>
-
-  <div class="form-container">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <h2>Login</h2>
-
-      <input formControlName="email" placeholder="Email Address">
-      <input formControlName="password" placeholder="Password">
-
-      <button [disabled]="!loginForm.valid" type="submit">Log in</button>
-
-      <p>Don't have account ? <a [routerLink]="['/sign-up']">Sign In</a></p>
-      <a [routerLink]="['/forgot-password']">Forgot password</a>
+  <div class="main">
+    <h3 class="display-6 pb-4 text-center">Login</h3>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="example-form">
+      <mat-form-field class="input">
+        <mat-label>Mail</mat-label>
+        <input formControlName="email" matInput>
+      </mat-form-field>
+      <mat-form-field class="input">
+        <mat-label>Password</mat-label>
+        <input formControlName="password" type="password" matInput>
+      </mat-form-field>
+      <button [disabled]="!loginForm.valid" type="submit" id="save-pass-btn" mat-raised-button>Login</button>
     </form>
+    <p>Don't have account ? <a [routerLink]="['/sign-up']">Sign In</a></p>
+    <a [routerLink]="['/forgot-password']">Forgot password</a>
   </div>
 </div>
+
