--- a/BarberBooking/barberbooking.client/src/app/modules/sign-up/sign-up.component.css
+++ b/BarberBooking/barberbooking.client/src/app/modules/sign-up/sign-up.component.css
@@ -1,83 +1,29 @@
-/* Container styling */
-.form-container {
+.main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
-  background-color: #C8E6E4;
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-form {
-  background-color: #FFFFFF;
-  padding: 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 360px;
-  text-align: center;
-}
-
-  /* Form title */
-form h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  color: #333333;
-}
-
-  /* Form subtitle */
-form p {
-  font-size: 14px;
-  margin-bottom: 30px;
-  color: #666666;
-}
-
-/* Input fields */
-input {
+  justify-content: center;
   width: 100%;
-  padding: 12px;
-  margin: 10px 0;
-  border: 2px solid #CCCCCC;
-  border-radius: 5px;
-  font-size: 16px;
+  height: calc(100vh - 40px);
 }
 
-input:focus {
-  outline: none;
-  border: 2px solid #C8E6E4 ;
-  transition: border 0.3s ease-in;
+.example-form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
 }
 
-/* Button */
-button {
-  width: 100%;
-  padding: 12px;
-  background-color: #80C7B9;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
+.input {
+  max-width: 100%;
 }
 
-  button:hover {
-    background-color: #69A897; /* Darker green on hover */
-  }
-
-button:disabled {
-  background-color: #69A897;
-  color: #fff;
-  cursor: not-allowed;
-  opacity: 0.7;
+#save-pass-btn {
+  max-width: 156px;
+  padding: 16px
 }
 
-/* Sign-in link */
-form a {
-  color: #6FA99D;
-  text-decoration: none;
-  font-size: 14px;
+.main > p{
+    font-size:0.75em;
+    margin:0;
 }
 
-form a:hover {
-  text-decoration: underline;
-}
