--- a/BarberBooking/barberbooking.client/src/styles.css
+++ b/BarberBooking/barberbooking.client/src/styles.css
@@ -4,5 +4,10 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .cdk-global-overlay-wrapper, .cdk-overlay-container {
   z-index: 9999 !important;
-} 
+}
+
+.btn-success {
+  background-color: yellowgreen !important;
+  color: white !important;
+}
 
